--- a/docs/userguide/wrapper/test.ipynb
+++ b/docs/userguide/wrapper/test.ipynb
@@ -47,10 +47,10 @@
     {
      "data": {
       "text/html": [
-       "StandardNameTable(standard_names=[StandardName(description=a desc), StandardName(description=b desc)])"
+       "StandardNameTable(hasStandardNames=[StandardName(description=a desc), StandardName(description=b desc)])"
       ],
       "text/plain": [
-       "StandardNameTable(standard_names=[StandardName(description=a desc), StandardName(description=b desc)])"
+       "StandardNameTable(hasStandardNames=[StandardName(description=a desc), StandardName(description=b desc)])"
       ]
      },
      "execution_count": 4,
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "id": "fc24f4e3-8e95-4341-99eb-842f2cfcf019",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "StandardName(canonical_units=http://qudt.org/vocab/unit/M-PER-SEC, standard_name=y_velocity, description=A y vel, standard_name_table=StandardNameTable(\"None\"))"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "id": "de211e97-fdb3-4807-8e8e-c424f11a914c",
    "metadata": {
     "scrolled": true
@@ -110,7 +110,7 @@
        "StandardName(canonical_units=http://qudt.org/vocab/unit/M-PER-SEC, standard_name=x_velocity, description=A x vel, standard_name_table=StandardNameTable(\"None\"))"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "id": "76c87a01-5d50-4854-9787-c9f3544d22db",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "id": "9a429ed8-07a0-4e30-a8ad-40ed47eb7edc",
    "metadata": {},
    "outputs": [],
@@ -148,10 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "id": "8dcb8f4b-dce1-41d3-be47-f676f3616e9d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\da4323\\Anaconda3\\envs\\h5tbx\\lib\\site-packages\\pydantic\\main.py:314: UserWarning: Pydantic serializer warnings:\n",
+      "  Expected `url` but got `str` - serialized value may not be as expected\n",
+      "  return self.__pydantic_serializer__.to_python(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -375,34 +384,34 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--1772987409200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--1772987409200\">\n",
+       "                        <input id=\"group-ds--5651491900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5651491900\">\n",
        "                        /<span>(3)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-1772988107600\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-1772988110000\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-1772988110000\">u</label>\n",
+       "                <ul id=\"ds-1-/u-5652355900\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-5652358200\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-5652358200\">u</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : xvel<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(canonical_units=http://qudt.org/vocab/unit/M-PER-S...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : xvel<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={})</span></div></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-1772998485700\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/v-1772998488500\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/v-1772998488500\">v</label>\n",
+       "                <ul id=\"ds-1-/v-5793257000\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/v-5793259900\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/v-5793259900\">v</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : y_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(canonical_units=http://qudt.org/vocab/unit/M-PER-S...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : y_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={})</span></div></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-1773008382900\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-1773008382900\">\n",
+       "                        <input id=\"group-ds-h5rdmtoolbox-5849207000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-5849207000\">\n",
        "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
        "                  \n",
        "\n",
@@ -439,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
    "id": "14a51605-e8d7-4430-a43d-9aef0226cdc9",
    "metadata": {},
    "outputs": [],
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "id": "adae35ae-4224-49c8-baf1-0242974e0fa5",
    "metadata": {},
    "outputs": [
@@ -463,13 +472,10 @@
       "              'prov': 'http://www.w3.org/ns/prov#',\n",
       "              'rdfs': 'http://www.w3.org/2000/01/rdf-schema#',\n",
       "              'skos': 'http://www.w3.org/2004/02/skos/core#',\n",
-      "              'ssno': 'https://matthiasprobst.github.io/ssno#'},\n",
+      "              'ssno': 'https://matthiasprobst.github.io/ssno#',\n",
+      "              'standard_name_table': 'https://matthiasprobst.github.io/ssno#standardNameTable'},\n",
       " '@type': 'ssno:StandardName',\n",
-      " 'dcterms:description': 'A x vel',\n",
-      " 'ssno:canonical_units': 'http://qudt.org/vocab/unit/M-PER-SEC',\n",
-      " 'ssno:standard_name': 'x_velocity',\n",
-      " 'ssno:standard_name_table': {'@type': 'ssno:StandardNameTable',\n",
-      "                              'dcterms:identifier': 'https://doi.org/10.5281/zenodo.10428817'}}\n"
+      " 'standard_name_table': {'@type': 'ssno:StandardNameTable'}}\n"
      ]
     }
    ],
@@ -480,12 +486,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
+   "id": "4b4e2383-0628-4094-89a0-a07123e6994f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdflib.plugins.shared.jsonld.context import Context"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "dd710b9f-a175-40b8-bd52-1550cfe1d1f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jsonld = h5tbx.dump_jsonld(h5.hdf_filename, structural=True, compact=True, resolve_keys=True, context={'ssno': 'https://matthiasprobst.github.io/ssno#'})"
+    "jsonld = h5tbx.dump_jsonld(h5.hdf_filename,\n",
+    "                           structural=True,\n",
+    "                           compact=True,\n",
+    "                           resolve_keys=True,\n",
+    "                           context={'ssno': 'https://matthiasprobst.github.io/ssno#'})"
    ]
   },
   {
@@ -498,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "id": "08aabba3-dca5-4cd6-960e-89bfdfd8d424",
    "metadata": {},
    "outputs": [],
@@ -558,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "id": "f2b1e555-ffc3-43a3-96a5-c81e5c22ff2e",
    "metadata": {},
    "outputs": [],
@@ -568,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "id": "77023f2d-3698-450f-ba9b-9a313f62106b",
    "metadata": {},
    "outputs": [],
@@ -623,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 17,
    "id": "632adac1-a1f9-4f85-ac07-eb5384e73adc",
    "metadata": {},
    "outputs": [
@@ -633,7 +653,7 @@
        "['/u']"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 18,
    "id": "c13dc614-f121-4feb-98b1-54126950286e",
    "metadata": {},
    "outputs": [
@@ -654,7 +674,7 @@
        "'/u'"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,28 +685,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "id": "4c8923db-8813-4782-9f8e-7932a1010df7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/u'"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "JSONLD(hdf_filename).find_one_dataset_with_standard_name('x_velocity')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 20,
    "id": "3015ff69-310f-40f6-b3e4-3626a4e3d747",
    "metadata": {},
    "outputs": [
@@ -696,7 +705,7 @@
        "'/v'"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,17 +716,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "id": "7ba6c77e-1673-4271-90e1-ccd7b5c3892d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['x_velocity', 'y_velocity']"
+       "[]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
