--- a/docs/userguide/convention/examples/standard_name_convention.ipynb
+++ b/docs/userguide/convention/examples/standard_name_convention.ipynb
@@ -125,8 +125,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_wind6013421500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_wind6013421500\">\n",
+       "        <input id=\"group-x_wind7601787500\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind7601787500\">\n",
        "        x_wind</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
@@ -855,8 +855,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity9465222900\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity9465222900\">\n",
+       "        <input id=\"group-x_velocity14906939400\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity14906939400\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -897,8 +897,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate9481546700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate9481546700\">\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate14931324000\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate14931324000\">\n",
        "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity. X indicates the x-axis component of the vector. The spatial coordinate. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -929,8 +929,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-square_of_static_pressure9496648800\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure9496648800\">\n",
+       "        <input id=\"group-square_of_static_pressure14943299600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure14943299600\">\n",
        "        square_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static air pressure is the amount of pressure exerted by air that is not moving.</li>      </il>\n",
@@ -961,8 +961,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-arithmetic_mean_of_static_pressure9510159700\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure9510159700\">\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure14963215900\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure14963215900\">\n",
        "        arithmetic_mean_of_static_pressure</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static air pressure is the amount of pressure exerted by air that is not moving.</li>      </il>\n",
@@ -1108,8 +1108,8 @@
       "text/html": [
        "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "    <li>\n",
-       "        <input id=\"group-x_velocity9647127500\" type=\"checkbox\" checked>\n",
-       "        <label style=\"font-weight: bold\" for=\"group-x_velocity9647127500\">\n",
+       "        <input id=\"group-x_velocity15251982700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity15251982700\">\n",
        "        x_velocity</label>\n",
        "        <ul class=\"h5tb-attr-list\">\n",
        "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity. X indicates the x-axis component of the vector.</li>      </il>\n",
@@ -1366,33 +1366,21 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--9715125600\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--9715125600\">\n",
-       "                        /<span>(2)</span></label>\n",
+       "                        <input id=\"group-ds--15417604100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--15417604100\">\n",
+       "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table : 10428795</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-9717949500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-9717953000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-9717953000\">u</label>\n",
+       "                <ul id=\"ds-1-/u-15425559500\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-15425569200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-15425569200\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-9718558800\" type=\"checkbox\" >\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-9718558800\">\n",
-       "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://schema.org/softwareVersion\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://schema.org/softwareVersion</span></a> : 1.2.3a2</li><li style=\"list-style-type: none; font-style: italic\">code_repository<a href=\"https://schema.org/codeRepository\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://schema.org/codeRepository</span></a> : <a href=\"https://github.com/matthiasprobst/h5RDMtoolbox\">https://github.com/matthiasprobst/h5RDMtoolbox</a></li>\n",
-       "                    </ul>\n",
-       "</li>\n",
-       "</ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
@@ -1421,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "51075c5a-d8d0-41fa-9ab2-653e011dedd3",
    "metadata": {},
    "outputs": [],
@@ -1432,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "dd46a713-fb5a-414e-9668-ec157524c86a",
    "metadata": {},
    "outputs": [],
@@ -1443,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "3ee62f0a-aea6-429f-bcda-7329b2ef42c0",
    "metadata": {},
    "outputs": [
@@ -1670,41 +1658,29 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--33244124800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--33244124800\">\n",
-       "                        /<span>(3)</span></label>\n",
+       "                        <input id=\"group-ds--15834216900\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--15834216900\">\n",
+       "                        /<span>(2)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name_table : 10428795</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-33244951800\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/u-33244954600\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/u-33244954600\">u</label>\n",
+       "                <ul id=\"ds-1-/u-15836976800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-15836990300\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/u-15836990300\">u</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : x_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standard_name_table={'identifier': 'https://doi.or...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : x_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={'identifier': 'https://doi.org/...)</span></div></li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/v-33418205400\" class=\"h5tb-var-list\">\n",
-       "                <input id=\"ds-2-/v-33418209400\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
-       "                <label class='h5tb-varname' for=\"ds-2-/v-33418209400\">v</label>\n",
+       "                <ul id=\"ds-1-/v-16364291100\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/v-16364301000\" class=\"h5tb-varname-in\" type=\"checkbox\" checked>\n",
+       "                <label class='h5tb-varname' for=\"ds-2-/v-16364301000\">v</label>\n",
        "                <span class=\"h5tb-dims\">3 [] (int32)</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : y_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standard_name_table={'identifier': 'https://doi.or...)</span></div></li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name<a href=\"https://matthiasprobst.github.io/ssno#hasStandardName\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://matthiasprobst.github.io/ssno#hasStandardName</span></a> : y_velocity<div class=\"tooltip\"><img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /><span class=\"tooltiptext\">ssno:StandardName(standardNameTable={'identifier': 'https://doi.org/...)</span></div></li>\n",
        "                </ul>\n",
        "                </ul>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds-h5rdmtoolbox-33426925500\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds-h5rdmtoolbox-33426925500\">\n",
-       "                        h5rdmtoolbox<a href=\"https://schema.org/SoftwareSourceCode\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">@type: https://schema.org/SoftwareSourceCode</span></a><span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://schema.org/softwareVersion\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://schema.org/softwareVersion</span></a> : 1.2.3a2</li><li style=\"list-style-type: none; font-style: italic\">code_repository<a href=\"https://schema.org/codeRepository\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"IRI_ICON\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://schema.org/codeRepository</span></a> : <a href=\"https://github.com/matthiasprobst/h5RDMtoolbox\">https://github.com/matthiasprobst/h5RDMtoolbox</a></li>\n",
-       "                    </ul>\n",
-       "</li>\n",
-       "</ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
@@ -1756,7 +1732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
