simplify db interface

--- a/docs/userguide/database/firstSteps.ipynb
+++ b/docs/userguide/database/firstSteps.ipynb
@@ -8,8 +8,8 @@
     "# First steps: HDF5 and databases\n",
     "\n",
     "There are two ways of working with HDF5 and databases:\n",
-    "1. Using HDF5 file(s) as a database\n",
-    "2. Writing HDF5 content into dedicated database solutions\n",
+    "1. Using HDF5 file(s) as a database itself.\n",
+    "2. Writing HDF5 content into dedicated database solutions.\n",
     "\n",
     "Both ways will be described in the next two chapters. The second approach is currently implemented for a [mongoDB](https://pymongo.readthedocs.io/en/stable/)-interface.\n",
     "\n",
@@ -989,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
