update hdfDB notebook and minor fixes

--- a/docs/userguide/database/mongo.ipynb
+++ b/docs/userguide/database/mongo.ipynb
@@ -31,6 +31,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to import module h5tbx\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "using(\"h5py\")"
@@ -364,49 +371,48 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--16945501200\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--16945501200\">\n",
+       "                        <input id=\"group-ds--10622454100\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10622454100\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__<a href=\"https://w3id.org/okn/o/sd#SoftwareVersion\" target=\"_blank\" class=\"tooltip\"> <img class=\"size_of_img\" src=\"https://github.com/matthiasprobst/h5RDMtoolbox/blob/dev/h5rdmtoolbox/data/iri_icon.png?raw=true\" alt=\"Image 1\" width=\"16\" height=\"16\" /> <span class=\"tooltiptext\">https://w3id.org/okn/o/sd#SoftwareVersion</span></a> : 1.2.3</li>\n",
+       "<ul class=\"h5tb-attr-list\">\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-16947631800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-16947634300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-16947634300\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-10624425900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-10624428900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-10624428900\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-16947768100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-16947770100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-16947770100\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-10624600400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-10624602800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-10624602800\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-16947912800\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-16947915000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-16947915000\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-10624743700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-10624746300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-10624746300\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-16948156500\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-16948158600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-16948158600\">images</label>\n",
+       "                <ul id=\"ds-1-/images-10624990400\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-10624993000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-10624993000\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-16948287900\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-16948291400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-16948291400\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-10625123000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-10625125500\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-10625125500\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -717,7 +723,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x1d8cf7b1d60>"
+       "<matplotlib.collections.QuadMesh at 0x1832ed5d5b0>"
       ]
      },
      "execution_count": 16,
@@ -824,7 +830,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
